<resources>
    <string name="app_name">Táplálkozás</string>
    <string name="login">Bejelentkezés</string>
    <string name="email">Emailcím</string>
    <string name="password">Jelszó</string>
    <string name="register">Regisztráció</string>
    <string name="passwordagain">Jelszó megerősítés</string>
    <string name="click_to_login">Már van fiókom</string>
    <string name="click_to_register">Még nincs fiókom</string>
    <string name="udv">Bejutottál a menűbe</string>
    <string name="logout">Kijelentkezés</string>
    <string name="profil">Profil</string>
    <string name="size">Mértékegység</string>
    <string name="add">Hozzáad</string>
    <string name="headstring">"Mit fogyasztottál? Add hozzá! "</string>
    <string name="weight">Mennyit</string>
    <string name="from">Mit</string>
    <string name="when">Fogyasztás időpontja</string>
    <string name="what">Miből</string>
    <string name="emlekz">Beállítás</string>
    <string name="idozito">Itt állítható be időzitő, ilyen időközönként küldök emlékeztető üzenetet.</string>
    <string name="ido">Időköz megadása másodpercben</string>
    <string-array name="mertekegysegek">
        <item>darab</item>
        <item>gramm</item>
        <item>dkg</item>
        <item>kg</item>
        <item>deciliter</item>
        <item>liter</item>
        <item>milliliter</item>
        <item>szelet</item>
        <item>pohár</item>
        <item>korsó</item>
        <item>lapostányér</item>
        <item>mélytányér</item>
        <item>teáskanál</item>
        <item>evőkanál</item>
    </string-array>
</resources>