<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".Login">

    <TextView
        android:text="@string/idozito"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idomezo"
            android:hint="@string/ido"
            android:layout_width="match_parent"
            android:inputType="datetime"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/emlekezteto"
        android:text="@string/emlekz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>